$Id$                       -*-text-*-


**** 1.36 [unrleased]

	Remove deprecated 2-argument TSIG->create() method.
	Revise TSIG test scripts and documentation.


**** 1.35 Oct 4, 2022

	Improve SVCB error reporting.

Fix rt.cpan.org #144328
	accept_reply test fails with matched consecutive "random"
	generated packet->id

Fix rt.cpan.org #144299
	Spelling errors.


**** 1.34 May 30, 2022

	Improve robustness of EDNS option compose/decompose functions.
	Simplify code in Makefile.PL.

Fix rt.cpan.org #142426
	Avoid "Useless use of a constant in void context" warning.


**** 1.33 Dec 16, 2021

Fix rt.cpan.org #137768
	Test t/05-SVCB.t on Perl 5.18.0 fails with deep recursion.

Fix rt.cpan.org #144136/#132921
	$resolver->send wrongly overwrites RD flag in user's packet.


**** 1.32 Jul 16, 2021

	Text: Offer both Unicode and escaped-ASCII strings.
	Add LICENSE file to comply with Fedora/RedHat announcement.

Fix rt.cpan.org #136666
	Net::DNS::RR::ZoneFile parser erroneously strips line
	terminators in quoted string forming part of multiline RR.


**** 1.31 May 2, 2021

	Improve implementation of SVCB record.


**** 1.30 Mar 30, 2021

	Simplify parsing of multi-line RRs in zone file.
	Improve robustness of "dry" resolver tests.
	Avoid deep recursion in non-fatal test report.


**** 1.29 Nov 18, 2020

	Include test number in summary of failed non-fatal tests.
	Remove Net::DNS::SEC specific tests.
	Fix faulty test plan in t/08-recurse.t.


**** 1.28 Oct 23, 2020

	Eliminate indirect object syntax.
	Eliminate grep/map <expression>.


**** 1.27 Sep 11, 2020

Fix rt.cpan.org #133203
	Net::DNS::RR::LOC erroneously strips non default values from
	string representation


**** 1.26 Aug 6, 2020

	Add HTTPS/SVCB packages.

Fix rt.cpan.org #132921
	EDNS OPT handling


**** 1.25 Jun 26, 2020

	Parsing of TSIG keyfiles made more robust.


**** 1.24 May 27, 2020

	Accept TSIG key generated by BIND tsig-keygen.
	Add Net::DNS::RR::AMTRELAY package.


**** 1.23 Mar 18, 2020
